--- a/Alert/app/src/main/res/layout/activity_login_screen.xml
+++ b/Alert/app/src/main/res/layout/activity_login_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.example.faizmohideen.alert.activity.LoginScreen">
+    tools:context="org.alertpreparedness.platform.alert.login.activity.LoginScreen">
 
 
     <LinearLayout
@@ -35,39 +35,20 @@
             android:layout_marginTop="52dp">
 
             <EditText
-                android:id="@+id/editText7"
-                android:layout_width="59dp"
-                android:layout_height="44dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/rounded_left"
-                android:drawableLeft="@drawable/login_person"
-                android:cursorVisible="false"
-                android:ems="10"
-                android:inputType="none"
-                android:padding="20dp"/>
-
-            <View
-                android:layout_width="2dp"
-                android:layout_height="44dp"
-                android:background="#E4E4E4"
-                android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/email_address"
-                android:layout_toStartOf="@+id/email_address" />
-
-            <EditText
                 android:id="@+id/email_address"
-                android:layout_width="252dp"
+                android:layout_width="315dp"
                 android:layout_height="44dp"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/editText7"
-                android:layout_toRightOf="@+id/editText7"
                 android:background="@drawable/rounded_edittext"
+                android:drawableLeft="@drawable/login_person"
+                android:drawablePadding="15dip"
                 android:ems="10"
                 android:hint="Email Address"
+                android:textColorHint="@color/hintGray"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="15dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="15dp"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="0dp" />
         </RelativeLayout>
@@ -78,56 +59,35 @@
             android:layout_marginTop="10dp">
 
             <EditText
-                android:id="@+id/passwordImg"
-                android:layout_width="59dp"
+                android:id="@+id/password"
+                android:layout_width="315dp"
                 android:layout_height="44dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:background="@drawable/rounded_left"
-                android:drawableLeft="@drawable/login_lock"
-                android:cursorVisible="false"
-                android:ems="10"
-                android:inputType="none"
-                android:padding="20dp"
-                android:paddingRight="15dp"/>
-            <View
-                android:layout_width="2dp"
-                android:layout_height="44dp"
-                android:background="#E4E4E4"
-                android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/password"
-                android:layout_toStartOf="@+id/password" />
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="252dp"
-                android:layout_height="44dp"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/passwordImg"
-                android:layout_toRightOf="@+id/passwordImg"
                 android:background="@drawable/rounded_edittext"
+                android:drawableLeft="@drawable/login_lock"
+                android:drawablePadding="15dip"
+                android:drawableRight="@drawable/login_eye"
                 android:ems="10"
                 android:hint="Password"
+                android:textColorHint="@color/hintGray"
                 android:inputType="textPassword"
                 android:paddingLeft="15dp"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="0dp"
                 android:paddingRight="12dp"
-                android:drawableRight="@drawable/login_eye"/>
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="15dp"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="0dp" />
         </RelativeLayout>
 
         <Button
             android:id="@+id/btnLogin"
+            android:text="Login"
             android:layout_width="315dp"
             android:layout_height="44dp"
-            android:layout_marginEnd="22dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginRight="22dp"
-            android:layout_marginStart="24dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/rounded_loginbtn"
-            android:text="Login"
             android:textColor="@android:color/background_light"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp" />
