--- a/Alert/app/src/main/res/layout/activity_main.xml
+++ b/Alert/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.example.faizmohideen.alert.activity.MainActivity">
+    tools:context="com.example.faizmohideen.alert.org.example.faizmohideen.alert.activity.MainActivity">
 
 </android.support.constraint.ConstraintLayout>
