--- a/Alert/app/src/main/res/layout/activity_login_screen.xml
+++ b/Alert/app/src/main/res/layout/activity_login_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="com.example.faizmohideen.alert.activity.LoginScreen">
+    tools:context="com.example.faizmohideen.alert.org.example.faizmohideen.alert.activity.LoginScreen">
 
 
     <LinearLayout
