--- a/Alert/app/src/main/res/layout/activity_home_screen.xml
+++ b/Alert/app/src/main/res/layout/activity_home_screen.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout android:id="@+id/my_drawer_layout"
-                                        xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:fitsSystemWindows="true">
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/home_drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:fitsSystemWindows="true">
 
     <FrameLayout
         android:id="@+id/mainScreen"
@@ -23,12 +24,10 @@
                 android:id="@+id/alert_appbar"
                 layout="@layout/custom_alert_appbar"
                 android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"/>
+                android:layout_height="?android:attr/actionBarSize" />
 
 
         </LinearLayout>
-
-
 
         <!-- Include Home Default Body -->
         <!--<include-->
@@ -37,11 +36,7 @@
     </FrameLayout>
 
     <!-- Navigation Drawer -->
-    <LinearLayout
-        android:layout_width="304dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="left|start"
-        android:fitsSystemWindows="true">
+
 
         <android.support.design.widget.NavigationView
             android:id="@+id/nav_view"
@@ -50,9 +45,6 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header_main"
-            app:menu="@menu/activity_main_drawer"/>
-
-    </LinearLayout>
-
+            app:menu="@menu/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
