--- a/Alert/app/src/main/res/layout/activity_home_screen.xml
+++ b/Alert/app/src/main/res/layout/activity_home_screen.xml
@@ -6,10 +6,6 @@
                                         android:layout_height="match_parent"
                                         android:fitsSystemWindows="true">
 
-    <FrameLayout
-        android:id="@+id/mainScreen"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <!-- Include Appbar -->
         <LinearLayout
@@ -23,6 +19,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"/>
 
+            <FrameLayout
+                android:id="@+id/mainScreen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
 
         </LinearLayout>
 
@@ -32,7 +33,6 @@
         <!--<include-->
         <!--android:id="@+id/task_empty"-->
         <!--layout="@layout/empty_adapter" />-->
-    </FrameLayout>
 
     <!-- Navigation Drawer -->
     <LinearLayout
