--- a/Alert/app/src/main/res/layout/activity_home_screen.xml
+++ b/Alert/app/src/main/res/layout/activity_home_screen.xml
@@ -1,50 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/home_drawer_layout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
     android:fitsSystemWindows="true">
 
-    <FrameLayout
-        android:id="@+id/mainScreen"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/darker_gray">
 
         <!-- Include Appbar -->
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <include
+            android:id="@+id/alert_appbar"
+            layout="@layout/custom_alert_appbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/black"
-            android:orientation="vertical">
+            android:layout_height="?android:attr/actionBarSize" />
 
-            <include
-                android:id="@+id/alert_appbar"
-                layout="@layout/custom_alert_appbar"
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize" />
-
-
-        </LinearLayout>
+    </LinearLayout>
 
         <!-- Include Home Default Body -->
         <!--<include-->
         <!--android:id="@+id/task_empty"-->
         <!--layout="@layout/empty_adapter" />-->
-    </FrameLayout>
-
-    <!-- Navigation Drawer -->
 
 
-        <android.support.design.widget.NavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="340dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            app:headerLayout="@layout/nav_header_main"
-            app:menu="@menu/activity_main_drawer" />
-
-</android.support.v4.widget.DrawerLayout>
+</android.support.constraint.ConstraintLayout>
