--- a/Alert/app/src/main/res/layout/risk_indicator_item_view.xml
+++ b/Alert/app/src/main/res/layout/risk_indicator_item_view.xml
@@ -50,9 +50,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tvIndicatorNextUpdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
+                android:text="@string/next_update"
                 tools:text="Next update"/>
 
             <TextView
