--- a/Alert/app/src/main/res/values/colors.xml
+++ b/Alert/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="app_bar_color">#131D50</color>
     <color name="page_indicator_color">#006EA0</color>
     <color name="grey_title">#66000000</color>
+    <color name="divider_color">#FFEAEAEA</color>
 </resources>
