--- a/Alert/app/src/main/res/layout/activity_risk.xml
+++ b/Alert/app/src/main/res/layout/activity_risk.xml
@@ -18,8 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:title="@string/risk_monitoring"
-            app:navigationIcon="@mipmap/ic_launcher_round"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
         <android.support.design.widget.TabLayout
@@ -38,8 +36,8 @@
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/fabRiskMenu"
         android:layout_gravity="bottom|end"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:menu_colorPressed="@color/risk_fab_color"
         android:layout_margin="10dp"
         app:menu_colorNormal="@color/risk_fab_color">
@@ -48,9 +46,9 @@
             android:id="@+id/fabRiskIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_round"
-            app:menu_colorPressed="@color/risk_fab_color"
-            app:menu_colorNormal="@color/risk_fab_color"
+            fab:fab_colorNormal="@color/risk_fab_color"
+            fab:fab_colorPressed="@color/risk_fab_color"
+            android:src="@drawable/ic_track_changes_white_24dp"
             android:layout_marginBottom="5dp"
             fab:fab_label="Indicator"
             fab:fab_size="mini"/>
@@ -60,9 +58,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            app:menu_colorPressed="@color/risk_fab_color"
-            android:src="@mipmap/ic_launcher_round"
-            app:menu_colorNormal="#006EA0"
+            fab:fab_colorNormal="@color/risk_fab_color"
+            fab:fab_colorPressed="@color/risk_fab_color"
+            android:src="@drawable/ic_report_problem_white_24dp"
             fab:fab_label="Create alert"
             fab:fab_size="mini"/>
 
