--- a/Alert/app/src/main/res/values/colors.xml
+++ b/Alert/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="page_indicator_color">#006EA0</color>
     <color name="grey_title">#66000000</color>
     <color name="divider_color">#FFEAEAEA</color>
+    <color name="remove_button">#E10514</color>
 </resources>
