--- a/Alert/app/src/main/res/values/colors.xml
+++ b/Alert/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#131D50</color>
     <color name="colorPrimaryDark">#131D50</color>
-    <color name="colorAccent">#46AA31</color>
+    <color name="colorAccent">#131D50</color>
     <color name="btnColor">#006ea0</color>
     <color name="white">#ffffff</color>
     <color name="alertGreen">#46AA31</color>
