--- a/Alert/app/src/main/res/layout/content_select_area.xml
+++ b/Alert/app/src/main/res/layout/content_select_area.xml
@@ -26,6 +26,7 @@
             android:text="Country"/>
 
         <TextView
+            android:id="@+id/tvSelectCountry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
@@ -55,6 +56,7 @@
             android:text="Level 1"/>
 
         <TextView
+            android:id="@+id/tvSelectLevel1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
@@ -84,6 +86,7 @@
             android:text="Level 2"/>
 
         <TextView
+            android:id="@+id/tvSelectLevel2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
