--- a/Alert/app/src/main/res/layout/my_tasks_list.xml
+++ b/Alert/app/src/main/res/layout/my_tasks_list.xml
@@ -1,6 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:fillViewport="true">
 
     <LinearLayout
@@ -11,20 +11,19 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/alert_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:gravity="left"
-            android:text="@string/my_tasks" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:gravity="left"
+        android:text="@string/my_tasks" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/tasks_list_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
