--- a/Alert/app/src/main/res/layout/fragment_active_risk.xml
+++ b/Alert/app/src/main/res/layout/fragment_active_risk.xml
@@ -2,7 +2,16 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="@android:color/white"
              tools:context="org.alertpreparedness.platform.alert.risk_monitoring.ActiveRiskFragment">
+
+    <TextView
+        android:id="@+id/tvNoIndicators"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:text="@string/no_indicators_have_been_added"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvRiskActive"
