--- a/Alert/app/src/main/res/layout/risk_indicator_item_view.xml
+++ b/Alert/app/src/main/res/layout/risk_indicator_item_view.xml
@@ -27,7 +27,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
         android:orientation="horizontal">
 
         <TextView
@@ -47,6 +47,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
