--- a/Alert/app/src/main/res/values/colors.xml
+++ b/Alert/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="grey_title">#66000000</color>
     <color name="divider_color">#FFEAEAEA</color>
     <color name="remove_button">#E10514</color>
+    <color name="hazard_tab_color">#F3F3F3</color>
 </resources>
