--- a/Alert/app/src/main/res/layout/risk_indicator_item_view.xml
+++ b/Alert/app/src/main/res/layout/risk_indicator_item_view.xml
@@ -7,22 +7,40 @@
               android:orientation="vertical"
               android:padding="10dp">
 
-    <TextView
-        android:id="@+id/tvIndicatorGeo"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/grey_title"
-        android:textSize="12sp"
-        android:layout_marginBottom="2dp"
-        tools:text="National indicator"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvIndicatorGeo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:textColor="@color/grey_title"
+            android:textSize="12sp"
+            tools:text="National indicator"/>
+
+        <TextView
+            android:id="@+id/tvIndicatorNetworkName"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:gravity="end"
+            android:textColor="@color/grey_title"
+            android:textSize="12sp"
+            android:visibility="gone"
+            tools:text="Network Name"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvIndicatorName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="13sp"
         android:layout_marginBottom="2dp"
         android:textColor="@android:color/black"
+        android:textSize="13sp"
         tools:text="Trends in manufaction"/>
 
     <LinearLayout
@@ -34,12 +52,12 @@
             android:id="@+id/tvIndicatorLevel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@drawable/indicator_green"
             android:layout_weight="1"
-            android:textSize="13sp"
+            android:background="@drawable/indicator_green"
             android:gravity="center_vertical"
-            android:textColor="@android:color/white"
             android:padding="10dp"
+            android:textColor="@android:color/white"
+            android:textSize="13sp"
             tools:text="Potential challenges n risk"/>
 
         <LinearLayout
@@ -54,16 +72,16 @@
                 android:id="@+id/tvIndicatorNextUpdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
+                android:text="@string/next_update"
                 android:textColor="@color/alertGreen"
-                android:text="@string/next_update"/>
+                android:textSize="12sp"/>
 
             <TextView
                 android:id="@+id/tvIndicatorDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="12sp"
                 android:textColor="@color/alertGreen"
+                android:textSize="12sp"
                 tools:text="09 Nov 2017"/>
 
         </LinearLayout>
