--- a/Alert/app/src/main/res/layout/adapter_my_tasks.xml
+++ b/Alert/app/src/main/res/layout/adapter_my_tasks.xml
@@ -14,8 +14,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/home_task_red"
-        android:layout_marginLeft="24dp" />
+        app:srcCompat="@drawable/home_task_red" />
 
     <TextView
         android:id="@+id/task_status"
