--- a/Alert/app/src/main/res/layout/fragment_archived_risk.xml
+++ b/Alert/app/src/main/res/layout/fragment_archived_risk.xml
@@ -2,12 +2,27 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="org.alertpreparedness.platform.alert.risk_monitoring.ArchivedRiskFragment">
+             android:background="@android:color/white"
+             tools:context="org.alertpreparedness.platform.alert.risk_monitoring.ActiveRiskFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tvNoIndicatorsArchived"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:text="@string/no_indicators_have_been_added"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvRiskArchived"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:layout_height="match_parent" />
+
+    <android.support.v4.widget.ContentLoadingProgressBar
+        android:id="@+id/pbLoadingArchived"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
