--- a/Alert/app/src/main/res/layout/custom_alert_appbar.xml
+++ b/Alert/app/src/main/res/layout/custom_alert_appbar.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/green_alert_toolbar"
     android:layout_width="match_parent"
+    app:contentInsetLeft="0dp"
+    app:contentInsetStart="0dp"
+    android:contentInsetLeft="0dp"
+    android:contentInsetStart="0dp"
     android:layout_height="?android:attr/actionBarSize"
     android:background="@color/colorPrimaryDark">
 
@@ -11,7 +15,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/txt_title"
+            android:id="@+id/alert_bar_title"
             android:layout_width="212dp"
             android:layout_height="25dp"
             android:layout_centerHorizontal="true"
