--- a/Alert/app/src/main/res/layout/content_add_indicator.xml
+++ b/Alert/app/src/main/res/layout/content_add_indicator.xml
@@ -35,6 +35,7 @@
             android:background="@color/divider_color"/>
 
         <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/tvAddIndicatorName"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:paddingStart="20dp"
@@ -88,6 +89,7 @@
                 android:orientation="vertical">
 
                 <android.support.v7.widget.AppCompatEditText
+                    android:id="@+id/tvIndicatorGreenName"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:paddingStart="15dp"
@@ -129,6 +131,7 @@
                         android:background="@color/divider_color"/>
 
                     <android.support.v7.widget.AppCompatEditText
+                        android:id="@+id/etIndicatorGreenValue"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -188,6 +191,7 @@
                 android:orientation="vertical">
 
                 <android.support.v7.widget.AppCompatEditText
+                    android:id="@+id/tvIndicatorAmberName"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:paddingStart="15dp"
@@ -229,6 +233,7 @@
                         android:background="@color/divider_color"/>
 
                     <android.support.v7.widget.AppCompatEditText
+                        android:id="@+id/etIndicatorAmberValue"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -288,6 +293,7 @@
                 android:orientation="vertical">
 
                 <android.support.v7.widget.AppCompatEditText
+                    android:id="@+id/tvIndicatorRedName"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:paddingStart="15dp"
@@ -329,6 +335,7 @@
                         android:background="@color/divider_color"/>
 
                     <android.support.v7.widget.AppCompatEditText
+                        android:id="@+id/etIndicatorRedValue"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
