--- a/Alert/app/src/main/res/layout/activity_add_indicator.xml
+++ b/Alert/app/src/main/res/layout/activity_add_indicator.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.alertpreparedness.platform.alert.risk_monitoring.AddIndicatorActivity">
+    tools:context="org.alertpreparedness.platform.alert.risk_monitoring.view.AddIndicatorActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
