--- a/Alert/app/src/main/res/layout/content_add_indicator.xml
+++ b/Alert/app/src/main/res/layout/content_add_indicator.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.alertpreparedness.platform.alert.risk_monitoring.AddIndicatorActivity"
+    tools:context="org.alertpreparedness.platform.alert.risk_monitoring.view.AddIndicatorActivity"
     tools:showIn="@layout/activity_add_indicator">
 
     <LinearLayout
