--- a/Alert/app/src/main/res/drawable/alert_red.xml
+++ b/Alert/app/src/main/res/drawable/alert_red.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
     <solid android:color="@color/alertRed"/>
-    <size
-        android:width="63dp"
-        android:height="54dp" />
+
     <corners
-        android:bottomLeftRadius="5dp"
-        android:topLeftRadius="5dp" />
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
+        android:bottomLeftRadius="20dp"/>
 </shape>
