Detail view UI implemented for Alert

--- a/Alert/app/src/main/res/layout/adapter_my_tasks.xml
+++ b/Alert/app/src/main/res/layout/adapter_my_tasks.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
+        android:singleLine="false"
         android:textColor="@android:color/black"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/img_task"
@@ -34,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="24dp"
+        android:singleLine="false"
         android:textColor="@color/home_g"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
