--- a/Alert/app/src/main/res/layout/adapter_alert.xml
+++ b/Alert/app/src/main/res/layout/adapter_alert.xml
@@ -9,11 +9,11 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/alert_card"
-        android:layout_width="368dp"
+        android:layout_width="320dp"
         android:layout_height="54dp"
         android:layout_marginBottom="2dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +37,7 @@
                 android:id="@+id/txt_alert_level"
                 android:layout_width="48dp"
                 android:layout_height="36dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Amber Alert"
@@ -44,19 +45,18 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginLeft="8dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/img_hazard_icon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="14dp"
                 app:layout_constraintStart_toEndOf="@+id/img_alert_colour"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/bg_circle"
-                android:layout_marginLeft="8dp" />
+                app:srcCompat="@drawable/bg_circle" />
 
             <TextView
                 android:id="@+id/txt_hazard_name"
